--- a/styles/temples.css
+++ b/styles/temples.css
@@ -26,7 +26,7 @@ main {
 header {
   display: flex;
   justify-content: space-between;
-  background: rgb(12, 28, 36);
+  background: #333;
   padding: 20px;
   align-items: center;
   position: relative;
@@ -42,7 +42,7 @@ nav ul {
   left: 0;
   position: absolute;
   width: 100%;
-  background: rgb(12, 28, 36);
+  background: #333;
 }
 
 ul {
@@ -100,7 +100,7 @@ img {
 }
 
 footer {
-  background-color: var(--primary-color);
+  background-color: black;
   padding: 1rem;
   text-align: center;
 }
