--- a/styles/temples.css
+++ b/styles/temples.css
@@ -75,7 +75,7 @@ span,
   font-weight: 700;
   text-decoration: none;
   padding: 1px 10px;
-  background-color: #eee;
+  background-color: #fff;
   color: #000;
 }
 
