--- a/styles/base.css
+++ b/styles/base.css
@@ -21,12 +21,12 @@ header span {
   display: block;
   text-align: center;
   color: var(--accent-color2);
-  background-color: var(--primary-color);
+  background-color: #000;
   padding: 1rem;
 }
 
 nav {
-  background: rgb(12, 28, 36);
+  background: #000;
   padding: 1rem 2rem;
 }
 
@@ -39,7 +39,7 @@ nav ul {
 nav a {
   display: block;
   text-decoration: none;
-  color: rgb(243, 244, 244);
+  color: #fff;
 }
 
 nav li:hover {
@@ -126,7 +126,7 @@ hr {
 }
 
 footer {
-  background-color: var(--secondary-color);
+  background-color: #000;
   padding: 1rem;
   text-align: center;
 }
