--- a/styles/place.css
+++ b/styles/place.css
@@ -15,10 +15,10 @@ body {
   font-style: normal;
 }
 
-.hero img {
-  width: 100%;
-  height: auto;
+section {
+  position: relative;
 }
+
 
 .hero img {
   width: 100%;
@@ -31,10 +31,16 @@ header {
   padding: 1rem;
   background-color: var(--primary-color);
   color: var(--secondary-color);
+  position: relative;
 }
 
-.header-line {
-  height: 10px;
+.container::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8px;
   background: linear-gradient(135deg, #027e29 0%, #ffffff 50%, #027e29 100%);
 }
 
@@ -51,8 +57,8 @@ header {
 }
 
 .weather-widget .head img {
-    width: 80px;
-    height: 80px;
+  width: 80px;
+  height: 80px;
 }
 
 .data,
