--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -46,12 +46,17 @@
     color: #333;
   }
 
-  .svg-icon{
+  .svg-icon {
     display: none;
   }
   .emoticon {
-  display: block;
-}
+    display: block;
+  }
+
+  .weather-widget .head img {
+    width: 50px;
+    height: 50px;
+  }
   .data,
   .weather-widget {
     position: absolute;
