--- a/styles/place.css
+++ b/styles/place.css
@@ -49,16 +49,15 @@ header {
   margin-bottom: 2rem;
 }
 
-.weather-widget .head {
+.weather-widget .head  {
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 1rem;
 }
 
-.weather-widget .head img {
-  width: 80px;
-  height: 80px;
+.head h2 {
+  display: flex;
+  gap: 0.5rem;
 }
 
 .data,
