--- a/week05/styles/form.css
+++ b/week05/styles/form.css
@@ -24,7 +24,7 @@ h1 {
   text-align: center;
   margin-bottom: 1rem;
   color: white;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 /* Groups */
@@ -45,7 +45,6 @@ legend {
 .optional {
   font-weight: normal;
   font-size: 0.85rem;
-  color: #1f3c88;
 }
 
 input[type='text'],
@@ -117,4 +116,10 @@ footer p:first-child {
 
 footer p:last-child {
   color: white;
+}
+
+@media screen and (min-width: 640px) {
+  h1 {
+    font-size: 1.3rem;
+  }
 }
